Margin fix and alignment

--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -66,6 +66,7 @@
     display: flex;
     align-items: center;
     gap: 1rem;
+    background-color: transparent;
 }
 
 .middle-item{
