--- a/src/app/work/work.component.css
+++ b/src/app/work/work.component.css
@@ -4,6 +4,14 @@
     font-weight: normal;
     font-style: normal;
   }
+  :host {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.hero-work-body{
+    margin-top: 8rem;
+}
 .window-outline{
     overflow-y: auto;
     outline: 1px solid #f2f2f226;
